--- a/css/styles.css
+++ b/css/styles.css
@@ -18,7 +18,6 @@
     color: #2E2F42;
 }
 .navigation a {
-    font-family: "Roboto", sans-serif;
     font-weight: 500;
     line-height: 1.5;
     font-size: 16px;
@@ -44,7 +43,6 @@
 }
 
 .contacts a {
-    font-family: "Roboto", sans-serif;
     font-weight: 400;
         line-height: 1.5;
         font-size: 16px;
@@ -62,7 +60,11 @@
 }
 
 ul {
-    list-style-type: none;
+    list-style: none;
+}
+
+a {
+    text-decoration: none;
 }
 
 .openingh {
@@ -71,14 +73,12 @@ ul {
     letter-spacing: 0.02em;
 }
 .opening {
-        font-family: "Roboto", sans-serif;
         font-weight: 700;
         text-align: center;
         color: #FFFFFF;
         background-color: #2E2F42;
 }
 .button {
-        font-family: "Roboto", sans-serif;
         font-size: 16px;
         font-weight: 500;
         line-height: 1.5;
@@ -95,7 +95,6 @@ ul {
 }
 
 .teamh {
-    font-family: Roboto;
     font-size: 20px;
     font-weight: 500;
     line-height: 1.2;
@@ -106,7 +105,6 @@ ul {
 
 
 .teamp {
-        font-family: Roboto;
         font-size: 16px;
         line-height: 1.5;
         letter-spacing: 0.02em;
@@ -115,7 +113,6 @@ ul {
 }
 
 .contenth {
-        font-family: Roboto;
         font-size: 36px;
         font-weight: 700;
         line-height: 1.11;
